Refactorized CSS, HTML and JS.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JobTray",
+  "name": "jobtray",
   "version": "1.0.0",
   "description": "---------------------------------------------------------------------------------------------------------------------------",
   "homepage": "https://github.com/RobertoTM03/JobTray#readme",
